objects/Metadata_Component__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Metadata Component</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Metadata_Components</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Metadata Components</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Metadata Component No.#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>